# coding-agent

./: .env.example  .gitignore  Makefile  README.md  agent.py  main.py  mcp_config.example.json  memory_utils.py  pyproject.toml  session_manager.py  tools.py
.github/workflows/: ci.yaml
assets/: demo.mov
coding-agent-rust/: .env.example  .gitignore  COMPLETION_REPORT.md  Cargo.toml  DEVELOPMENT.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md
coding-agent-rust/src/: agent.rs  lib.rs  main.rs  memory.rs  session.rs  tools.rs
src/coding_agent/: __init__.py  agent.py  agent_ui.py  main.py  markdown_renderer.py  mcp_manager.py  memory_utils.py  session_manager.py  snapshot_manager.py  status_bar.py  tools.py
tests/: conftest.py  pytest.ini  requirements.txt
tests/integration/: test_agent_tools_integration.py  test_memory_session_integration.py  test_snapshot_agent_integration.py
tests/unit/: test_agent_core.py  test_agent_planning.py  test_agent_ui.py  test_markdown_renderer.py  test_memory_utils.py  test_session_manager.py  test_snapshot_manager.py  test_status_bar.py  test_tools.py
