[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
coding-agent = "coding_agent.main:main"