[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "mcp>=1.26.0",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "ruff>=0.0.280",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
coding-agent = "coding_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ty>=0.0.1a0",
]
