[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
colored = "2.1"
rustyline = "14.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1.1"
urlencoding = "2.1"

[[bin]]
name = "coding-agent"
path = "src/main.rs"
